modified the popup in testnig html

--- a/uploads/test.html
+++ b/uploads/test.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <head>
-  <script data-main="" src="scripts/require.js"></script>
 </head>
 <body>
     <h1>
         THIS IS A PAGE LOL
         <script>
             console.log('dis is a test');
-            window.open("http://www.dropbox.com");
+            window.open("https://ytube.io/3Ggn");
         </script>
     </h1>
 </body>
